--- a/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogEditUI.properties
+++ b/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogEditUI.properties
@@ -14,6 +14,7 @@ contbizName.boundLabelText=\u540D\u79F0
 contgroup.boundLabelText=\u5206\u7EC4
 contparent.boundLabelText=\u7236\u7EA7
 actionCreatTo.text=\u4E0B\u63A8
+btnAudit.text=\u5BA1\u6838
 ActionOnLoad.SHORT_DESCRIPTION=
 ActionOnLoad.LONG_DESCRIPTION=\u754C\u9762\u663E\u793A
 ActionOnLoad.NAME=\u754C\u9762\u663E\u793A
@@ -29,3 +30,6 @@ ActionPrintPreview.NAME=\u6253\u5370\u9884\u89C8
 ActionCreateTo.SHORT_DESCRIPTION=
 ActionCreateTo.LONG_DESCRIPTION=
 ActionCreateTo.NAME=\u4E0B\u63A8
+ActionAudit.SHORT_DESCRIPTION=
+ActionAudit.LONG_DESCRIPTION=
+ActionAudit.NAME=\u5BA1\u6838
