--- a/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogEditUI_l1.properties
+++ b/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogEditUI_l1.properties
@@ -14,6 +14,7 @@ contbizName.boundLabelText=
 contgroup.boundLabelText=
 contparent.boundLabelText=
 actionCreatTo.text=
+btnAudit.text=
 ActionOnLoad.SHORT_DESCRIPTION=
 ActionOnLoad.LONG_DESCRIPTION=
 ActionOnLoad.NAME=
@@ -29,3 +30,6 @@ ActionPrintPreview.NAME=
 ActionCreateTo.SHORT_DESCRIPTION=
 ActionCreateTo.LONG_DESCRIPTION=
 ActionCreateTo.NAME=
+ActionAudit.SHORT_DESCRIPTION=
+ActionAudit.LONG_DESCRIPTION=
+ActionAudit.NAME=
