--- a/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogListUI_l1.properties
+++ b/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogListUI_l1.properties
@@ -32,3 +32,6 @@ ActionTDPrint.NAME=
 ActionTDPrintPreview.SHORT_DESCRIPTION=
 ActionTDPrintPreview.LONG_DESCRIPTION=
 ActionTDPrintPreview.NAME=
+ActionAudit.SHORT_DESCRIPTION=
+ActionAudit.LONG_DESCRIPTION=
+ActionAudit.NAME=
