--- a/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogListUI_l3.properties
+++ b/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogListUI_l3.properties
@@ -1,4 +1,4 @@
-this.title=\u7CFB\u7D71\u96C6\u6210\u5E73\u81FA
+this.title=\u8ABF\u7528\u6191\u8B49\u4ECB\u9762\u65E5\u8A8C
 tblMain.id=id
 tblMain.dataType=\u6578\u64DA\u985E\u578B
 tblMain.EaiCenter.bizId=\u696D\u52D9\u6578\u64DAID
@@ -27,3 +27,6 @@ ActionTDPrint.NAME=
 ActionTDPrintPreview.SHORT_DESCRIPTION=
 ActionTDPrintPreview.LONG_DESCRIPTION=
 ActionTDPrintPreview.NAME=
+ActionAudit.SHORT_DESCRIPTION=
+ActionAudit.LONG_DESCRIPTION=
+ActionAudit.NAME=\u5BE9\u6838
