--- a/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogEditUI_l3.properties
+++ b/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogEditUI_l3.properties
@@ -1,4 +1,4 @@
-this.title=\u7CFB\u7D71\u96C6\u6210\u5E73\u81FA
+this.title=\u8ABF\u7528\u6191\u8B49\u4ECB\u9762\u65E5\u8A8C
 contlocalNumber.boundLabelText=\u8CA1\u52D9\u55AE\u64DA\u7DE8\u78BC
 contreadTime.boundLabelText=\u8B80\u53D6\u6642\u9593
 contlocalId.boundLabelText=\u8CA1\u52D9\u55AE\u64DAID
@@ -14,6 +14,7 @@ contbizName.boundLabelText=\u540D\u7A31
 contgroup.boundLabelText=\u5206\u7D44
 contparent.boundLabelText=\u7236\u7D1A
 actionCreatTo.text=\u4E0B\u63A8
+btnAudit.text=\u5BE9\u6838
 ActionOnLoad.SHORT_DESCRIPTION=
 ActionOnLoad.LONG_DESCRIPTION=\u4ECB\u9762\u986F\u793A
 ActionOnLoad.NAME=\u4ECB\u9762\u986F\u793A
@@ -29,3 +30,6 @@ ActionPrintPreview.NAME=\u5217\u5370\u9810\u89BD
 ActionCreateTo.SHORT_DESCRIPTION=
 ActionCreateTo.LONG_DESCRIPTION=
 ActionCreateTo.NAME=\u4E0B\u63A8
+ActionAudit.SHORT_DESCRIPTION=
+ActionAudit.LONG_DESCRIPTION=
+ActionAudit.NAME=\u5BE9\u6838
