--- a/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogListUI_l2.properties
+++ b/src/com/kingdee/eas/custom/llwebservice/client/AbstractCallVoucherLogListUI_l2.properties
@@ -27,3 +27,6 @@ ActionTDPrint.NAME=
 ActionTDPrintPreview.SHORT_DESCRIPTION=
 ActionTDPrintPreview.LONG_DESCRIPTION=
 ActionTDPrintPreview.NAME=
+ActionAudit.SHORT_DESCRIPTION=
+ActionAudit.LONG_DESCRIPTION=
+ActionAudit.NAME=\u5BA1\u6838
